# vqms_dev

./: .env.copy  .gitignore  .ruff.toml  CLAUDE.md  Flow.md  README.md  codebase_document.docx  main.py  pyproject.toml  requirements.txt
Doc/: API.md  VQMS_ASCII_Flow_Diagrams.md  merge_local_vqm_plan.md
Sample_Mail/: Mail.txt
config/: __init__.py  settings.py
data/knowledge_base/: ap_processing_timeline.md  general_vendor_inquiry.md  invoice_payment_process.md  overdue_invoice_policy.md  po_mismatch_resolution.md
docs/references/: GenAI_AgenticAI_Coding_Standards_Full_transcription.md  VQMS_Implementation_Plan.docx  VQMS_Solution_Flow_Document.docx
frontend/: angular.json  package-lock.json  package.json
prompts/query_analysis/: v1.jinja
scripts/: check_aws.py  check_db.py  check_graph_api.py  codebase_to_doc.py  run_email_intake.py  run_email_to_analysis.py  run_migrations.py  run_pipeline.py  seed_email_dashboard.py
src/adapters/: bedrock.py  graph_api.py  openai_provider.py  salesforce.py
src/agents/: abc_agent.py  query_analysis.py
src/cache/: pg_cache.py  redis_client.py
src/db/: connection.py
src/events/: eventbridge.py
src/llm/: factory.py  protocol.py
src/models/: __init__.py  auth.py  budget.py  communication.py  email.py  email_dashboard.py  kb.py  memory.py  messages.py  query.py  ticket.py  triage.py  vendor.py  workflow.py
src/orchestration/: graph.py  sqs_consumer.py
src/queues/: sqs.py
src/services/: auth.py  email_dashboard_service.py  email_intake.py  kb_search.py  memory_context.py  portal_submission.py  routing.py  (+1 more)
tasks/: lessons.md  todo.md
tests/: conftest.py
(+70 files in other folders)
