[project]
name = "vqms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.42.83",
    "botocore>=1.42.83",
    "cryptography>=46.0.6",
    "email-validator>=2.3.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "langchain-aws>=1.4.3",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.6",
    "langsmith>=0.7.25",
    "msal>=1.35.1",
    "openai>=2.30.0",
    "orjson>=3.11.8",
    "paramiko<4.0.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pysnow>=0.7.17",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.24",
    "pyyaml>=6.0.3",
    "redis[hiredis]>=7.4.0",
    "requests>=2.33.1",
    "simple-salesforce>=1.12.9",
    "sqlalchemy[asyncio]>=2.0.49",
    "sshtunnel>=0.4.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.44.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "fakeredis>=2.34.1",
    "isort>=8.0.1",
    "moto[events,s3,sqs,stepfunctions]>=5.1.22",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.9",
]
